--- a/task1/index.html
+++ b/task1/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Резюме - Троцюк Владислав</title>
+  <title>Резюме - Владислав Троцюк</title>
 
   <link rel="stylesheet" href="styles.css">
 
